# EScheduler-Python-SDK

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release.yml
examples/: README.md  advanced_features_example.py  basic_usage.py  cron_examples.py  error_handling_example.py  http_task_example.py  task_management_example.py  team_auth_example.py
src/escheduler_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py
